--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-    "rewrites": [
-      { "source": "/", "destination": "/index.html" },
-      { "source": "/solution", "destination": "/components/solution/solution.html" },
-      { "source": "/contact", "destination": "/components/contact/contact.html" }
-    ],
-    "cleanUrls": true
-  }
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/solution", "destination": "/components/solution/solution.html" },
+    { "source": "/contact", "destination": "/components/contact/contact.html" }
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
+}
