--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
-  "rewrites": [
-    { "source": "/", "destination": "/index.html" },
-    { "source": "/solution", "destination": "/components/solution/solution.html" },
-    { "source": "/contact", "destination": "/components/contact/contact.html" }
+  "routes": [
+    { 
+      "src": "/solution", 
+      "dest": "/components/solution/solution.html" 
+    },
+    { 
+      "src": "/contact", 
+      "dest": "/components/contact/contact.html" 
+    }
   ],
-  "cleanUrls": true,
-  "trailingSlash": false
+  "cleanUrls": true
 }
